--- a/demo-version/demo.scss
+++ b/demo-version/demo.scss
@@ -16,39 +16,11 @@ body{
     min-height:100vh;
     // overflow: hidden;
 }
-
-.dropdown {
-    .dropdown-menu{    
-        backdrop-filter: blur(1px);
-        box-shadow:0.1px 0.1px 5px #999;
-        inset: 0px !important;
-        min-width: 2rem!important;
-        min-height:5rem!important;
-
-        a:hover{
-            background-color:transparent;
-            text-shadow:1px 1px 5px #999;
-        }
-       
-        }
-}
     
 
 
 .header {
     height: var(--header-height);
-
-    .header-left{
-        z-index:3;
-    }
-
-    .logo {
-        height: var(--logo-size) !important;
-        margin-right:10px;
-    }
-    p{
-        font-size:14px;
-    }
 }
 
 
@@ -97,75 +69,18 @@ body{
     margin-left:-50px!important;
 }
 
-.carousel{
-    
-    .carousel-inner{
-        margin:120px 0 0 -60px!important;
-        padding:80px 170px;
-
-        img{
-            width:28px;
-            height:40px;
-        }
-    }
-
+.text-area{
+    margin:170px 0 0 100px;
 }
 
-//////////////////////////////// OPEN MENU
 
-.openmenu{
-    background-color: rgba(26, 84, 148, 0.9);
-    backdrop-filter: blur(10px);
-    color:white;
-    display: none;
-    width:100%;
-    height:max-content;
-    z-index:2;
-    top:0%;
-    position:absolute;
-    a:hover{
-        background-color:transparent;
-        text-shadow:1px 1px 5px #999;
+.social {
+    img{
+        width: 20px !important;
+        
+        height: 28px !important;
     }
 }
-
-////////////////////////////////////////////////////////////////////////////////////////////////OPEN MENU
-.search{
-    border-bottom:1px solid #fff;
-    input{
-        background-color:transparent;
-        border:none;
-        padding:10px;
-        color:#fff!important;
-        &:focus{
-            outline: none !important;
-        // box-shadow: 0 0 10px #719ECE;
-        }
-    }
-  
-}
-::placeholder{
-    color: #fff !important;
-}
-
-.menu-links{
-    a{
-        text-decoration:none;
-
-    }
-}
-
-.menu-drop{
-    background-color:rgba(27, 102, 178, 0.8)!important;
-    backdrop-filter: brightness(100%);
-}
-
-
-
-
-
-
-
 
 
 ////////////////////////////
@@ -178,60 +93,32 @@ body{
 
 @media (max-width: 420px) {
 
-    @for $i from 0 through 60 {
-        .f-md-#{$i} {
-            font-size: #{$i}px !important;
-        }
-    }
+ 
     .header{
         margin-top:30px!important;
-        p{
-            font-size:9px!important;
-        }
-        .header-left{
-            margin-left:30px!important;
-        }
-        .header-right{
-            margin-right:-10px!important;
-        }
-    }
-   .nav-link{
-       font-size:10px!important;
-   }
 
-    .carousel{
-        margin:-80px 0 0 0!important;
-
-        .carousel-inner{
-            margin:100px  0 0 -50px!important;
-            padding:40px 30px;    
-        }
-
-        .carousel-item h2{
-            font-size:24px!important;
-        }
     }
 
     .buta-image{
         margin-top:70px!important;
     }
 
-    .dropdown-2{
-        display:block;
-
-        button{
-            padding:0.25rem 0.3rem!important;
-        }   
-    }
 
     .social {
         img{
-            width: 23px !important;
+            width: 20px !important;
             
-            height: 32px !important;
+            height: 28px !important;
         }
     }
 
+    .text-area{
+        margin:80px 0 0 50px;
+        
+        h2{
+            font-size:18px!important;
+        }
+    }
 
 }
 
@@ -239,30 +126,34 @@ body{
 
 @media (max-width:769px){
 
-   .carousel{
-       margin-top:-100px!important;
-    .carousel-inner{
-        margin:100px 0 0 -60px!important;
-        padding:50px 90px;
-    }
 
-   }
    .buta-image{
     margin-top:20px!important;
 }
-    .dropdown{
-        display:none;
+
+.text-area{
+    margin:100px 0 0 50px;
+    
+    h2{
+        font-size:24px!important;
     }
-    .dropdown-2{
-        display:block;
-    }
+}
 }
 
 ////////////////////////////////
 @media (max-width:1024px){
 
+    .text-area{
+        margin:50px 0 0 30px;
+        
+        h2{
+            font-size:24px!important;
+        }
+    }
 
 }
+
+///////////////////////////////
 
 .visually-lg-hidden {
     @media (min-width: 992px) {
